Resolved checkstyle and findbugs issues